--- a/mk2/index.html
+++ b/mk2/index.html
@@ -10,60 +10,79 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel='stylesheet' href='https://yaireo.github.io/tagify/dist/tagify.css'>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.5.3/dist/css/foundation.min.css" integrity="sha256-xpOKVlYXzQ3P03j397+jWFZLMBXLES3IiryeClgU5og= sha384-gP4DhqyoT9b1vaikoHi9XQ8If7UNLO73JFOOlQV1RATrA7D0O7TjJZifac6NwPps sha512-AKwIib1E+xDeXe0tCgbc9uSvPwVYl6Awj7xl0FoaPFostZHOuDQ1abnDNCYtxL/HWEnVOMrFyf91TDgLPi9pNg==" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.5.3/dist/css/foundation.min.css" integrity="sha256-xpOKVlYXzQ3P03j397+jWFZLMBXLES3IiryeClgU5og= sha384-gP4DhqyoT9b1vaikoHi9XQ8If7UNLO73JFOOlQV1RATrA7D0O7TjJZifac6NwPps sha512-AKwIib1E+xDeXe0tCgbc9uSvPwVYl6Awj7xl0FoaPFostZHOuDQ1abnDNCYtxL/HWEnVOMrFyf91TDgLPi9pNg=="
+    crossorigin="anonymous">
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
   <script src='https://yaireo.github.io/tagify/dist/jQuery.tagify.min.js'></script>
   <script src='https://yaireo.github.io/tagify/dist/tagify.min.js'></script>
-  <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.5.3/dist/js/foundation.min.js" integrity="sha256-/PFxCnsMh+nTuM0k3VJCRch1gwnCfKjaP8rJNq5SoBg= sha384-9ksAFjQjZnpqt6VtpjMjlp2S0qrGbcwF/rvrLUg2vciMhwc1UJJeAAOLuJ96w+Nj sha512-UMSn6RHqqJeJcIfV1eS2tPKCjzaHkU/KqgAnQ7Nzn0mLicFxaVhm9vq7zG5+0LALt15j1ljlg8Fp9PT1VGNmDw==" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.5.3/dist/js/foundation.min.js" integrity="sha256-/PFxCnsMh+nTuM0k3VJCRch1gwnCfKjaP8rJNq5SoBg= sha384-9ksAFjQjZnpqt6VtpjMjlp2S0qrGbcwF/rvrLUg2vciMhwc1UJJeAAOLuJ96w+Nj sha512-UMSn6RHqqJeJcIfV1eS2tPKCjzaHkU/KqgAnQ7Nzn0mLicFxaVhm9vq7zG5+0LALt15j1ljlg8Fp9PT1VGNmDw=="
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.11.5/TweenMax.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.11.5/TimelineMax.min.js"></script>
   <script src="js/index.js"></script>
   <script src="js/typed.js"></script>
 </head>
 
 <body>
-  <div class="grid-y medium-grid-frame">
+  <div class="off-canvas-wrapper">
+    <div id="off-canvas" class="off-canvas position-left" data-off-canvas>My Off-Canvas</div>
+    <div class="off-canvas-content" data-off-canvas-content>
+      <div class="grid-y medium-grid-frame">
 
-    <!-- Header -->
-    <div class="cell shrink header medium-cell-block-container">
-      <div class="cell small-1 medium-1 large-1">
-        <div class="pfLogoDiv">
-          <img class="pfLogo" src="assets/shigCrest3.svg">
-          <img class="pfMe" src="assets/rjc2.png">
+        <!-- Header -->
+        <header>
+          <div class="cell shrink header medium-cell-block-container">
+            <div class="cell small-12 medium-12 large-12">
+              <div class="pfLogoDiv">
+                <img class="pfLogo" src="assets/shigCrest3.svg">
+                <img class="pfMe" src="assets/rjc2.png">
+              </div>
+            </div>
+          </div>
+        </header>
+
+        <!-- Top -->
+        <main>
+        <div class="grid-x grid-padding-x">
+          <div class="cell small-12 medium-12 large-12">
+            <!-- Text -->
+            <div class="statement">
+              <h3><span class="typed1"></span><span class="typed2"></span><span class="typed3"></span></h3>
+            </div>
+
+            <!-- Search bar -->
+            <input name='tags-outside' class='tagify--outside' placeholder='Type skills or projects here...'>
+          </div>
+
+          <!-- Content -->
+          <div class="cell small-12 medium-12 large-12 projectWindow">
+            <div class="pfProjectWrap">
+              <div class="pfProject"></div>
+              <div class="pfProject"></div>
+              <div class="pfProject"></div>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="cell small-12 medium-12 large-12">
-      </div>
-      <div class="cell small-1 medium-1 large-1">
+        </main>
+
+          <!-- Footer -->
+          <footer>
+            <div class="cell small-12 medium-12 large-12">
+              <div class="horiLine"></div>
+                <div class="centerContent">
+                  <div class="vertiText">
+                    <p>クラリジ</p>
+                    <p>純一</p>
+                    <p>ロバート</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </footer>
+
+
       </div>
     </div>
-
-    <!-- Top -->
-    <div class="grid-x grid-padding-x">
-      <div class="cell small-12 medium-12 large-12">
-        <!-- Text -->
-        <div class="statement">
-          <h3><span class="typed1"></span><span class="typed2"></span><span class="typed3"></span></h3>
-        </div>
-
-        <!-- Search bar -->
-        <input name='tags-outside' class='tagify--outside' placeholder='write some tags'>
-      </div>
-
-      <!-- Content -->
-      <div class="cell small-12 medium-12 large-12">
-        <div class="pfProjectWrap">
-          <div class="pfProject"></div>
-          <div class="pfProject"></div>
-          <div class="pfProject"></div>
-        </div>
-    </div>
-
-
-    <!-- Footer -->
-    <div class="cell shrink footer">
-      <h3>Here's my footer</h3>
-    </div>
-  </div>
-
 </body>
 
 </html>
