--- a/mk2/index.html
+++ b/mk2/index.html
@@ -9,9 +9,9 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel='stylesheet' href='css/tagify.css'>
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.5.3/dist/css/foundation.min.css" integrity="sha256-xpOKVlYXzQ3P03j397+jWFZLMBXLES3IiryeClgU5og= sha384-gP4DhqyoT9b1vaikoHi9XQ8If7UNLO73JFOOlQV1RATrA7D0O7TjJZifac6NwPps sha512-AKwIib1E+xDeXe0tCgbc9uSvPwVYl6Awj7xl0FoaPFostZHOuDQ1abnDNCYtxL/HWEnVOMrFyf91TDgLPi9pNg=="
     crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
   <script src='https://yaireo.github.io/tagify/dist/jQuery.tagify.min.js'></script>
   <script src='https://yaireo.github.io/tagify/dist/tagify.min.js'></script>
@@ -82,6 +82,7 @@
 
         <!-- Footer -->
         <footer>
+          <div class="spacer50"></div>
           <div class="cell small-12 medium-12 large-12">
             <div class="horiLine"></div>
             <div class="centerContent">
