--- a/mk2/index.html
+++ b/mk2/index.html
@@ -50,12 +50,16 @@
             <div class="cell small-8 medium-8 large-8">
               <!-- Text -->
               <div class="spacer50"></div>
-              <div class="statement">
+              <div class="pfHeadImage"></div>
+              <div class="pfStatement">
                 <h4><span class="typed1"></span><span class="typed2"></span><span class="typed3"></span></h4>
               </div>
 
               <!-- Search bar -->
-              <input name='tags-outside' class='tagify--outside' placeholder='Type skills or projects here...'>
+              <div class="spacer30"></div>
+              <div class="">
+                <input name='tags-outside' class='tagify--outside' placeholder='Type skills or projects here...'>
+              </div>
             </div>
             <div class="cell small-2 medium-2 large-2"></div>
 
@@ -64,16 +68,24 @@
             <div class="cell small-1 medium-1 large-1"></div>
             <div class="cell small-10 medium-10 large-10 projectWindow">
               <div class="pfProjectWrap">
-                <div class="pfProject"></div>
-                <div class="pfProject"></div>
-                <div class="pfProject"></div>
-                <div class="pfProject"></div>
+                <div class="pfProject hvr-grow-shadow">
+                  <div class="pfTitle">ACROLIST</div>
+                  <div class="pfThumbnail"></div>
+                  <div class="pfText"></div>
+                </div>
+                <div class="pfProject hvr-grow-shadow">
+                  <div class="pfTitle">MASTERPLAN</div>
+                  <div class="pfThumbnail"></div>
+                  <div class="pfText"></div>
+                </div>
+                <div class="pfProject hvr-grow-shadow"></div>
+                <div class="pfProject hvr-grow-shadow"></div>
               </div>
               <div class="pfProjectWrap">
-                <div class="pfProject"></div>
-                <div class="pfProject"></div>
-                <div class="pfProject"></div>
-                <div class="pfProject"></div>
+                <div class="pfProject hvr-grow-shadow"></div>
+                <div class="pfProject hvr-grow-shadow"></div>
+                <div class="pfProject hvr-grow-shadow"></div>
+                <div class="pfProject hvr-grow-shadow"></div>
               </div>
             </div>
             <div class="cell small-1 medium-1 large-1"></div>
