--- a/mk2/index.html
+++ b/mk2/index.html
@@ -20,6 +20,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.11.5/TweenMax.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.11.5/TimelineMax.min.js"></script>
   <script src="js/index.js"></script>
+  <script src="js/tags.js"></script>
   <script src="js/typed.js"></script>
 </head>
 
@@ -58,7 +59,7 @@
               <!-- Search bar -->
               <div class="spacer30"></div>
               <div class="">
-                <input name='tags-outside' class='tagify--outside' placeholder='Type skills or projects here...'>
+                <input name='tags-outside' class='tagify--outside' placeholder='Search my portfolio for skills, projects and tools...'>
               </div>
             </div>
             <div class="cell small-2 medium-2 large-2"></div>
@@ -68,24 +69,23 @@
             <div class="cell small-1 medium-1 large-1"></div>
             <div class="cell small-10 medium-10 large-10 projectWindow">
               <div class="pfProjectWrap">
-                <div class="pfProject hvr-grow-shadow">
+                <div class="pfProject hvr-grow-shadow" id="acrolist">
                   <div class="pfTitle">ACROLIST</div>
                   <div class="pfThumbnail"></div>
                   <div class="pfText"></div>
                 </div>
-                <div class="pfProject hvr-grow-shadow">
+                <div class="pfProject hvr-grow-shadow" id="masterplan">
                   <div class="pfTitle">MASTERPLAN</div>
                   <div class="pfThumbnail"></div>
                   <div class="pfText"></div>
                 </div>
-                <div class="pfProject hvr-grow-shadow"></div>
-                <div class="pfProject hvr-grow-shadow"></div>
-              </div>
-              <div class="pfProjectWrap">
-                <div class="pfProject hvr-grow-shadow"></div>
-                <div class="pfProject hvr-grow-shadow"></div>
-                <div class="pfProject hvr-grow-shadow"></div>
-                <div class="pfProject hvr-grow-shadow"></div>
+                <div class="pfProject hvr-grow-shadow" id="a"></div>
+                <div class="pfProject hvr-grow-shadow" id="b"></div>
+
+                <div class="pfProject hvr-grow-shadow" id="c"></div>
+                <div class="pfProject hvr-grow-shadow" id="d"></div>
+                <div class="pfProject hvr-grow-shadow" id="e"></div>
+                <div class="pfProject hvr-grow-shadow" id="f"></div>
               </div>
             </div>
             <div class="cell small-1 medium-1 large-1"></div>
