--- a/mk2/index.html
+++ b/mk2/index.html
@@ -50,14 +50,14 @@
             <div class="cell small-2 medium-2 large-2"></div>
             <div class="cell small-8 medium-8 large-8">
               <!-- Text -->
-              <div class="spacer50"></div>
-              <div class="pfHeadImage"></div>
+              <div class="spacer30"></div>
+              <!-- <div class="pfHeadImage"></div> -->
               <div class="pfStatement">
                 <h4><span class="typed1"></span><span class="typed2"></span><span class="typed3"></span></h4>
               </div>
 
               <!-- Search bar -->
-              <div class="spacer30"></div>
+              <!-- <div class="spacer30"></div> -->
               <div class="">
                 <input name='tags-outside' class='tagify--outside' placeholder='Search my portfolio for skills, projects and tools...'>
               </div>
