--- a/mk2/index.html
+++ b/mk2/index.html
@@ -19,8 +19,8 @@
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.11.5/TweenMax.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.11.5/TimelineMax.min.js"></script>
-  <script src="js/index.js"></script>
   <script src="js/tags.js"></script>
+  <script src="js/index.js"></script>
   <script src="js/typed.js"></script>
 </head>
 
@@ -59,7 +59,7 @@
               <!-- Search bar -->
               <!-- <div class="spacer30"></div> -->
               <div class="">
-                <input name='tags-outside' class='tagify--outside' placeholder='Search my portfolio for skills, projects and tools...'>
+                <input name='tags-outside' class='tagify--outside' placeholder='Search my skills and work'>
               </div>
             </div>
             <div class="cell small-2 medium-2 large-2"></div>
@@ -69,24 +69,12 @@
             <div class="cell small-1 medium-1 large-1"></div>
             <div class="cell small-10 medium-10 large-10 projectWindow">
               <div class="pfProjectWrap">
-                <div class="pfProject hvr-grow-shadow" id="acrolist">
-                  <div class="pfTitle">ACROLIST</div>
-                  <div class="pfThumbnail"></div>
-                  <div class="pfText"></div>
-                </div>
-                <div class="pfProject hvr-grow-shadow" id="masterplan">
-                  <div class="pfTitle">MASTERPLAN</div>
-                  <div class="pfThumbnail"></div>
-                  <div class="pfText"></div>
-                </div>
-                <div class="pfProject hvr-grow-shadow" id="a"></div>
-                <div class="pfProject hvr-grow-shadow" id="b"></div>
+                <!-- Code from google sheets -->
 
-                <div class="pfProject hvr-grow-shadow" id="c"></div>
-                <div class="pfProject hvr-grow-shadow" id="d"></div>
-                <div class="pfProject hvr-grow-shadow" id="e"></div>
-                <div class="pfProject hvr-grow-shadow" id="f"></div>
-              </div>
+                <div class="pfProject hvr-grow-shadow" id="masterplan"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="acrolist"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="feedme"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="talentmarket"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="shirtzquiz"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="orgtree"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="locationdirectory"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="pinobard"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="atom"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="risktrackerrpa"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="spiritofscrum"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="lovebots"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="salterns"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="naughty"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="countdown"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="illustrations"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="hse"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="seafly"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="lightning368"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="tewerobridge"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="sailing"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="imperialdissertation"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="gadatascience"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="charteredbanker"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="stemnet"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div><div class="pfProject hvr-grow-shadow" id="coaching"><div class="pfTitleInput"></div><div class="pfThumbnail"></div><div class="pfText"></div></div>
+
+
+              <!-- end code from google sheets -->
             </div>
             <div class="cell small-1 medium-1 large-1"></div>
           </div>
@@ -105,8 +93,9 @@
               </div>
             </div>
           </div>
+        </footer>
       </div>
-      </footer>
+
 
 
     </div>
