changed logo animation

--- a/mk2/index.html
+++ b/mk2/index.html
@@ -38,6 +38,7 @@
                 <div class="pfLogoDiv">
                   <img class="pfLogo" src="assets/shigCrest3.svg">
                   <img class="pfMe" src="assets/rjc2.png">
+                  <img class="pfMe2" src="assets/rjc2.png">
                 </div>
               </div>
             </div>
