--- a/mk2/index.html
+++ b/mk2/index.html
@@ -48,25 +48,51 @@
 
         <!-- Top -->
         <main>
+          <div id="whiteTop" class="bottom"></div>
           <div class="grid-x grid-padding-x">
             <div class="cell small-1 medium-1 large-1"></div>
             <div class="cell small-8 medium-8 large-8">
               <!-- Text -->
-              <div class="spacer50"></div>
+              <div class="spacer220"></div>
               <!-- <div class="pfHeadImage"></div> -->
-              <div class="pfStatement">
+              <div class="pfStatement bottom">
                 <h4><span class="typed1"></span><span class="typed2"></span><span class="typed3"></span></h4>
               </div>
 
               <!-- Search bar -->
               <!-- <div class="spacer30"></div> -->
-              <div class="">
+              <div class="bottom" id="menu">
                 <input name='tags-outside' class='tagify--outside' placeholder='Search my skills and work'>
+              </div>
+              <div class="spacer80"></div>
+              <div class="filterButton-container">
+                <a href="#" class="filterButton" onclick="alert('k')">Ways of Working</a>
+              </div>
+              <div class="filterButton-container">
+                <a href="#" class="filterButton" onclick="alert('k')">Design</a>
+              </div>
+              <div class="filterButton-container">
+                <a href="#" class="filterButton" onclick="alert('k')">Front & Back End</a>
+              </div>
+              <div class="filterButton-container">
+                <a href="#" class="filterButton" onclick="alert('k')">Cloud & DevOps</a>
+              </div>
+              <div class="filterButton-container">
+                <a href="#" class="filterButton" onclick="alert('k')">Data</a>
+              </div>
+              <div class="filterButton-container">
+                <a href="#" class="filterButton" onclick="alert('k')">Sound</a>
+              </div>
+              <div class="filterButton-container">
+                <a href="#" class="filterButton" onclick="alert('k')">Civil Engineering</a>
               </div>
             </div>
             <div class="cell small-2 medium-2 large-2"></div>
 
+
             <!-- Content -->
+            <div class="spacer30"></div>
+            <div class="spacer30"></div>
             <div class="spacer30"></div>
             <div class="cell small-1 medium-1 large-1"></div>
             <div class="cell small-10 medium-10 large-10 projectWindow">
