--- a/mk2/index.html
+++ b/mk2/index.html
@@ -64,27 +64,27 @@
               <div class="bottom" id="menu">
                 <input name='tags-outside' class='tagify--outside' placeholder='Search my skills and work'>
               </div>
-              <div class="spacer80"></div>
+              <!-- <div class="spacer80"></div> -->
               <div class="filterButton-container">
-                <a href="#" class="filterButton" onclick="alert('k')">Ways of Working</a>
+                <a href="#" class="filterButton" onclick=buttonClick("wowBtn") id="wowBtn">Ways of Working</a>
               </div>
               <div class="filterButton-container">
-                <a href="#" class="filterButton" onclick="alert('k')">Design</a>
+                <a href="#" class="filterButton" onclick=buttonClick(2) id="designBtn">Design</a>
               </div>
               <div class="filterButton-container">
-                <a href="#" class="filterButton" onclick="alert('k')">Front & Back End</a>
+                <a href="#" class="filterButton" onclick=buttonClick(3) id="fbeBtn">Front & Back End</a>
               </div>
               <div class="filterButton-container">
-                <a href="#" class="filterButton" onclick="alert('k')">Cloud & DevOps</a>
+                <a href="#" class="filterButton" onclick=buttonClick(4) id="cloudBtn">Cloud & DevOps</a>
               </div>
               <div class="filterButton-container">
-                <a href="#" class="filterButton" onclick="alert('k')">Data</a>
+                <a href="#" class="filterButton" onclick=buttonClick(5) id="dataBtn">Data</a>
               </div>
               <div class="filterButton-container">
-                <a href="#" class="filterButton" onclick="alert('k')">Sound</a>
+                <a href="#" class="filterButton" onclick=buttonClick(6) id="soundBtn">Sound</a>
               </div>
               <div class="filterButton-container">
-                <a href="#" class="filterButton" onclick="alert('k')">Civil Engineering</a>
+                <a href="#" class="filterButton" onclick=buttonClick(7) id="civBtn">Civil Engineering</a>
               </div>
             </div>
             <div class="cell small-2 medium-2 large-2"></div>
