--- a/mk2/index.html
+++ b/mk2/index.html
@@ -69,22 +69,25 @@
                 <a href="#" class="filterButton" onclick=buttonClick("wowBtn") id="wowBtn">Ways of Working</a>
               </div>
               <div class="filterButton-container">
-                <a href="#" class="filterButton" onclick=buttonClick(2) id="designBtn">Design</a>
+                <a href="#" class="filterButton" onclick=buttonClick("designBtn") id="designBtn">Design</a>
               </div>
               <div class="filterButton-container">
-                <a href="#" class="filterButton" onclick=buttonClick(3) id="fbeBtn">Front & Back End</a>
+                <a href="#" class="filterButton" onclick=buttonClick("fbeBtn") id="fbeBtn">Front & Back End</a>
               </div>
               <div class="filterButton-container">
-                <a href="#" class="filterButton" onclick=buttonClick(4) id="cloudBtn">Cloud & DevOps</a>
+                <a href="#" class="filterButton" onclick=buttonClick("cloudBtn") id="cloudBtn">Cloud & DevOps</a>
               </div>
               <div class="filterButton-container">
-                <a href="#" class="filterButton" onclick=buttonClick(5) id="dataBtn">Data</a>
+                <a href="#" class="filterButton" onclick=buttonClick("dataBtn") id="dataBtn">Data</a>
               </div>
               <div class="filterButton-container">
-                <a href="#" class="filterButton" onclick=buttonClick(6) id="soundBtn">Sound</a>
+                <a href="#" class="filterButton" onclick=buttonClick("soundBtn") id="soundBtn">Sound</a>
               </div>
               <div class="filterButton-container">
-                <a href="#" class="filterButton" onclick=buttonClick(7) id="civBtn">Civil Engineering</a>
+                <a href="#" class="filterButton" onclick=buttonClick("civBtn") id="civBtn">Civil Engineering</a>
+              </div>
+              <div class="filterButton-container">
+                <a href="#" class="filterButton" onclick=buttonClick("mobileBtn") id="mobileBtn">Mobile</a>
               </div>
             </div>
             <div class="cell small-2 medium-2 large-2"></div>
