--- a/mk2/subpage.html
+++ b/mk2/subpage.html
@@ -11,45 +11,43 @@
 
   <!-- Header Block -->
 
-  <div class="wideClear subpageHeader"></div>
+  <div class="wideClear subpageHeader">
+    <a href="index.html">
+      <img src="assets/images/left-arrow.png">
+    </a>
+  </div>
 
   <!-- Content Block -->
 
   <div class="wideClear">
+    <div class="newRow">
       <div class="subheadContent">
         <h1>Example Page Title</h1>
-        <h2>Etiam viverra mollis diam id tincidunt. Nullam bibendum justo vel erat rhoncus semper. Nulla facilisi. Quisque vitae nisi tincidunt, faucibus elit in, mollis ipsum.</h2>
+        <h2>Duis justo quam, vehicula eu varius eu, efficitur id sem. Nulla elementum urna nec diam venenatis, eu semper ex eleifend. Pellentesque tempor felis sit amet diam condimentum imperdiet nec non massa. Morbi ac elementum erat. Donec ornare velit eu aliquam pretium.</h2>
       </div>
+    </div>
   </div>
+  <div class="wideClear subContent text-center">
 
-
-
-    <div class="wideclear subContent">
-
-      <!-- Repeating Row - Content Left -->
-
-      <div class="newRow">
-        <div class="contentBlock">
-          <h4>Example Subtitle Here</h4>
-          <p>Sed mauris est, dignissim ut finibus sed, viverra ac erat. Mauris eget justo eu enim elementum lacinia. Vivamus ut sagittis elit. Cras vel velit gravida massa euismod faucibus sit amet vitae ante. Donec sit amet sapien nisi. Suspendisse
-            dapibus tempus magna eget tincidunt.</p>
-        </div>
-        <img src="assets/images/example_small.png">
+    <div class="newRow contentRow inline-block">
+      <div class="contentBlock">
+        <h4>Example Subtitle Here</h4>
+        <p>Sed mauris est, dignissim ut finibus sed, viverra ac erat. Mauris eget justo eu enim elementum lacinia. Vivamus ut sagittis elit. Cras vel velit gravida massa euismod faucibus sit amet vitae ante. Donec sit amet sapien nisi. Suspendisse
+          dapibus tempus magna eget tincidunt.</p>
       </div>
-
-      <!-- Repeating Row - Content Right -->
-
-      <div class="newRow">
-        <img src="assets/images/example_small.png">
-        <div class="contentBlock">
-          <h4>Example Subtitle Here</h4>
-          <p>Sed mauris est, dignissim ut finibus sed, viverra ac erat. Mauris eget justo eu enim elementum lacinia. Vivamus ut sagittis elit. Cras vel velit gravida massa euismod faucibus sit amet vitae ante. Donec sit amet sapien nisi. Suspendisse
-            dapibus tempus magna eget tincidunt.</p>
-        </div>
-      </div>
-
+      <img src="assets/images/example_small.png" alt="">
     </div>
 
+    <div class="newRow contentRow inline-block">
+      <div class="contentBlock">
+        <h4>Example Subtitle Here</h4>
+        <p>Sed mauris est, dignissim ut finibus sed, viverra ac erat. Mauris eget justo eu enim elementum lacinia. Vivamus ut sagittis elit. Cras vel velit gravida massa euismod faucibus sit amet vitae ante. Donec sit amet sapien nisi. Suspendisse
+          dapibus tempus magna eget tincidunt.</p>
+      </div>
+      <img src="assets/images/example_small.png" alt="">
+    </div>
+
+  </div>
 
 </body>
 
