--- a/mk2/index.html
+++ b/mk2/index.html
@@ -61,6 +61,7 @@
 
               <!-- Search bar -->
               <!-- <div class="spacer30"></div> -->
+              <div class="nav-placeholder"></div>
               <div class="bottom" id="menu">
                 <input name='tags-outside' class='tagify--outside' placeholder='Search my skills and work'>
               </div>
@@ -69,7 +70,7 @@
                 <a href="#" class="filterButton" onclick=buttonClick("wowBtn") id="wowBtn">Ways of Working</a>
                 <a href="#" class="filterButton" onclick=buttonClick("designBtn") id="designBtn">Design</a>
                 <a href="#" class="filterButton" onclick=buttonClick("fbeBtn") id="fbeBtn">Front & Back End</a>
-                <a href="#" class="filterButton" onclick=buttonClick("cloudBtn") id="cloudBtn">Cloud & DevOps</a>              
+                <a href="#" class="filterButton" onclick=buttonClick("cloudBtn") id="cloudBtn">Cloud & DevOps</a>
                 <a href="#" class="filterButton" onclick=buttonClick("dataBtn") id="dataBtn">Data</a>
                 <a href="#" class="filterButton" onclick=buttonClick("soundBtn") id="soundBtn">Sound</a>
                 <a href="#" class="filterButton" onclick=buttonClick("civBtn") id="civBtn">Civil Engineering</a>
